Bug 407244 - KBlocks does not display last move before game over
Summary: KBlocks does not display last move before game over
Status: RESOLVED FIXED
Alias: None
Product: kblocks
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Julian Helfferich
URL:
Keywords:
: 380462 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-05 18:03 UTC by Alexander Potashev
Modified: 2021-01-25 22:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (453.44 KB, image/png)
2019-05-05 18:04 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-05-05 18:03:15 UTC
SUMMARY
KBlocks does not display last move before game over.

STEPS TO REPRODUCE
1. See screenshot. I probably moved the "I" piece to the right by accident which caused game end and triggered the rankings table.

OBSERVED RESULT
It appears like the "I" piece did not move to the right and thus should not be 
reason for game end.

EXPECTED RESULT
The "I" piece should have been moved to the right so that it lands on top of the blue "J" piece to indicate why I lost this game.

SOFTWARE/OS VERSIONS
kblocks 0.4 (kblocks-18.12.2-1.fc29.x86_64)

Операционная система: Fedora 29
Версия KDE Plasma: 5.14.5
Версия Qt: 5.11.3
Версия KDE Frameworks: 5.55.0
Версия ядра: 5.0.8-200.fc29.x86_64
Архитектура: 64-битная
Процессоры: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Память: 15,4 ГиБ ОЗУ
Comment 1 Alexander Potashev 2019-05-05 18:04:43 UTC
Created attachment 119853 [details]
screenshot
Comment 2 Julian Helfferich 2020-12-06 19:44:36 UTC
*** Bug 380462 has been marked as a duplicate of this bug. ***
Comment 3 Julian Helfferich 2020-12-06 19:53:59 UTC
I can reproduce the bug and will attempt to fix it. I have created an issue on invent.kde.org to track the progress:

https://invent.kde.org/helfferich/kblocks/-/issues/1
Comment 4 Bug Janitor Service 2021-01-24 21:00:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/kblocks/-/merge_requests/5
Comment 5 Julian Helfferich 2021-01-25 22:57:24 UTC
Git commit fc3fd5cd6ea37896e307d8072fadc8609a68ac43 by Julian Helfferich.
Committed on 24/01/2021 at 20:05.
Pushed by aacid into branch 'master'.

Call updateLayout() also in stopGame()

Calling updateLayout() means that all remaining game actions are
processed when the game is intended to be stopped. This has the effect
that the play area is updated before the highscore window is shown,
not at a later time.

M  +27   -4    autotests/test_KBlocksItemGroup.cpp
M  +12   -10   src/KBlocksItemGroup.cpp

https://invent.kde.org/games/kblocks/commit/fc3fd5cd6ea37896e307d8072fadc8609a68ac43