Call updateLayout() also in stopGame()

Calling updateLayout() means that all remaining game actions are
processed when the game is intended to be stopped. This has the effect
that the play area is updated before the highscore window is shown,
not at a later time.

BUG: 407244