autotests/test_KBlocksItemGroup.cpp
@@ -21,14 +21,16 @@ class testKBlocksItemGroup : public QObject
 {
     Q_OBJECT
 private slots:
-    void testUpdateGameShouldProcessGameActionsOnGameOver();
+    void updateGameShouldProcessGameActionsOnGameOver();
+    void stopGameShouldProcessRemainingGameActions();
 };
 
-void testKBlocksItemGroup::testUpdateGameShouldProcessGameActionsOnGameOver()
+void testKBlocksItemGroup::updateGameShouldProcessGameActionsOnGameOver()
 {
     /**
-     * When the game is stopped (on game over), updateLayout needs to be
-     * called. Otherwise, the play area does not show where the last item
+     * When updateGame is called, updateLayout should be called even
+     * when the game is over. Otherwise, some game actions are not
+     * processed and the play area does not show where the last item
      * has moved, causing the game to be over.
      *
      * See bug 407244
@@ -45,6 +47,27 @@ void testKBlocksItemGroup::testUpdateGameShouldProcessGameActionsOnGameOver()
 
     QCOMPARE( mock->numberOfPickGameActionCalls, 1 );
 }
+
+void testKBlocksItemGroup::stopGameShouldProcessRemainingGameActions()
+{
+    /**
+     * When the game is stopped (on game over), updateLayout needs to be
+     * called. Otherwise, the play area is updated only after highscore
+     * has been shown.
+     *
+     * See bug 407244
+     */
+    std::unique_ptr<SingleGameInterface> pSingleGame( new MockSingleGame() );
+    std::unique_ptr<GraphicsInterface> pGraphics( new MockGraphics() );
+    std::unique_ptr<SoundInterface> pSound( new MockSound() );
+    KBlocksItemGroup itemGroup(0, pSingleGame.get(), pGraphics.get(), pSound.get() );
+
+    itemGroup.stopGame();
+
+    MockSingleGame *mock = dynamic_cast<MockSingleGame*>(pSingleGame.get());
+    QCOMPARE( mock->numberOfPickGameActionCalls, 1 );
+}
+
 
 QTEST_MAIN(testKBlocksItemGroup)
 
